assets/scss/_search.scss
.search-head {
  background: $colorGrayscale-pebble;
  padding: $gutter * 2 0;
  h1 {
    font-size: 32px;
    .search-count {
      font-size: 18px;
    }
  }
  p {
    font-size: 16px;
    line-height: 1.5em;
  }
  a {
    text-decoration: underline;
  }
  .search-term {
    font-weight: 600;
  }
  form {
    max-width: 100%;
    margin: 0 auto $gutter auto;
    button.submit-search {
      /* Discover more button BG: */
      background: #F9B625;
      border-radius: $border-radius;
      height: 50px;
      line-height: 48px;
      padding: 0 50px;
      font-size: 20px;
      margin-top: 0;
      vertical-align: top;
    }
    .input-group {
      margin-left: auto;
      margin-right: $gutter*.25;
      display: inline-block;
      width: 60%;

      @media screen and (max-width: 465px) {
        width: 100%;
      }

      input {
        border-radius: $border-radius !important;
        border-right-width: 0;
        box-shadow: none;
        border: none;
        display: inline-block;
        line-height: 22px;
        padding: 0 13px;
        height: 50px;
        float: left;
      }

      button {
        background-color: #fff;
        border: none;
        box-shadow: none;
        border-radius: 0 $border-radius $border-radius 0;
        padding: 14px;
        line-height: 22px;
        display: inline-block;
        float: right;

        i {
          color: $colorCru-gray;
        }
      }
    }
  }
}

.search-section {
  margin-bottom: $gutter*2;
}

.search-result-block {
  a.result {
    display: block;
    position: relative;

    &:hover {
      text-decoration: none;
      &:before {
        opacity: 1;      
      }
    }
    &:before {
      background: $colorCru-gold;
      opacity: 0;
      content: "";
      width: 10px;
      height: 10px;
      position: absolute;
      left: -15px;
      top: 10px;
      border-radius: 15px;
      transition: .25s all;
    }
  }
}

.search-section-head {
  margin: $gutter 0;
  h2 {
    text-align: center;
    font-size: 24px;
    font-weight: 600;
    height: 32px;
    line-height: 32px;
    @media screen and (max-width: 768px) {
      font-size: 20px;
    }
    &:before,
    &:after {
      background: #bbb;
      content: "";
      display: block;
      width: 38%;
      height: 1px;
      margin-top: 16px;
      @media screen and (max-width: 991px) {
        width: 32%;
      }
    }
    &:before {
      float: left;
    }
    &:after {
      float: right;
    }
  }
  &.big-words {
    h2 {
      &:before,
      &:after {
        @media screen and (max-width: 768px) {
          width: 18%;
        }
      }
    }
  }
}

